Fix hero banner spacing

--- a/src/components/HomePage/IntroductionSection/IntroductionSection.module.scss
+++ b/src/components/HomePage/IntroductionSection/IntroductionSection.module.scss
@@ -29,6 +29,10 @@
   line-height: 56px;
 }
 
+.image {
+  max-width: 100%;
+}
+
 @media (max-width: 1280px) {
   .content {
     flex-direction: column;
@@ -40,5 +44,9 @@
     padding: 80px 20px;
     text-align: center;
     min-height: 600px;
+  }
+
+  .content {
+    gap: 40px;
   }
 }
